kubernetes/components/ghost/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  name: ghost-public
spec:
  parentRefs:
    - kind: ListenerSet
      name: ${SLUG}-listener-set
      namespace: networking
  hostnames:
    - "blog.${DOMAIN}"
    - "www.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghost
          port: 2368
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  name: ghost-apex
spec:
  parentRefs:
    - kind: ListenerSet
      name: ${SLUG}-listener-set
      namespace: networking
  hostnames:
    - "${DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: "www.${DOMAIN}"
            statusCode: 301
